Tilføjet en masse

--- a/Lokalt_test_cov_matrix_korrekt.ipynb
+++ b/Lokalt_test_cov_matrix_korrekt.ipynb
@@ -51,86 +51,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "c46034c3-c4de-44ae-a749-55585c796280",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "All missing excludes 0.60% of the observations\n",
-      "Filen er indlæst og filtreret succesfuldt.\n",
-      "No size screen\n",
-      "Turnover wo addition/deletion rule: 0.19%\n",
-      "Turnover w  addition/deletion rule: 33.72%\n",
-      "          id        eom   sic size_grp            me  rvol_252d  dolvol_126d  \\\n",
-      "1      10104 2010-02-28  7372     mega  123619.74809   0.343023     0.854651   \n",
-      "2      10104 2010-03-31  7372     mega  129040.82501   0.267442     0.854651   \n",
-      "3      10104 2010-04-30  7372     mega  130101.18774   0.284884     0.848837   \n",
-      "4      10104 2010-05-31  7372     mega  113436.81847   0.354651     0.848837   \n",
-      "5      10104 2010-06-30  7372     mega  107857.95540   0.261628     0.843023   \n",
-      "...      ...        ...   ...      ...           ...        ...          ...   \n",
-      "28707  92655 2023-06-30  6324     mega  447491.23412   0.284884     0.953488   \n",
-      "28708  92655 2023-07-31  6324     mega  471446.66929   0.319767     0.953488   \n",
-      "28709  92655 2023-08-31  6324     mega  441458.42446   0.348837     0.941860   \n",
-      "28710  92655 2023-09-30  6324     mega  467033.72021   0.360465     0.947674   \n",
-      "28711  92655 2023-10-31  6324     mega  496091.90354   0.389535     0.941860   \n",
-      "\n",
-      "            age   aliq_at  aliq_mat  ...        dolvol        lambda  \\\n",
-      "1      0.270349  0.411043  0.177914  ...  7.094750e+08  2.818986e-10   \n",
-      "2      0.270349  0.558282  0.184049  ...  6.982804e+08  2.864179e-10   \n",
-      "3      0.270349  0.462500  0.157233  ...  6.802223e+08  2.940215e-10   \n",
-      "4      0.270349  0.456250  0.176101  ...  7.368972e+08  2.714083e-10   \n",
-      "5      0.270349  0.400000  0.113208  ...  7.367673e+08  2.714561e-10   \n",
-      "...         ...       ...       ...  ...           ...           ...   \n",
-      "28707  0.328488  0.358025  0.279221  ...  1.704982e+09  1.173033e-10   \n",
-      "28708  0.328488  0.586420  0.392157  ...  1.732788e+09  1.154209e-10   \n",
-      "28709  0.328488  0.586420  0.379085  ...  1.619178e+09  1.235194e-10   \n",
-      "28710  0.328488  0.580247  0.348684  ...  1.619647e+09  1.234837e-10   \n",
-      "28711  0.328488  0.425926  0.309211  ...  1.578173e+09  1.267289e-10   \n",
-      "\n",
-      "         rvol_m    tr_ld0    eom_ret   ret_ld1    tr_ld1    mu_ld0   ff12  \\\n",
-      "1      0.086833  0.068941 2010-03-31  0.042934  0.042934  0.034614  BusEq   \n",
-      "2      0.069843  0.042934 2010-04-30  0.007960  0.008060  0.064595  BusEq   \n",
-      "3      0.066398  0.008060 2010-05-31 -0.127589 -0.127489  0.019248  BusEq   \n",
-      "4      0.069360 -0.127489 2010-06-30 -0.049307 -0.049207 -0.080946  BusEq   \n",
-      "5      0.066903 -0.049207 2010-07-31  0.103772  0.103872 -0.053784  BusEq   \n",
-      "...         ...       ...        ...       ...       ...       ...    ...   \n",
-      "28707  0.066245 -0.010165 2023-07-31  0.049142  0.053142  0.069017  Money   \n",
-      "28708  0.066737  0.053142 2023-08-31 -0.063368 -0.058868  0.036647  Money   \n",
-      "28709  0.066813 -0.058868 2023-09-30  0.057611  0.062111 -0.019997  Money   \n",
-      "28710  0.066119  0.062111 2023-10-31  0.057504  0.061804 -0.048173  Money   \n",
-      "28711  0.065042  0.061804 2023-11-30  0.028084  0.032784 -0.029172  Money   \n",
-      "\n",
-      "       valid  \n",
-      "1      False  \n",
-      "2      False  \n",
-      "3      False  \n",
-      "4      False  \n",
-      "5      False  \n",
-      "...      ...  \n",
-      "28707   True  \n",
-      "28708   True  \n",
-      "28709   True  \n",
-      "28710   True  \n",
-      "28711   True  \n",
-      "\n",
-      "[28369 rows x 130 columns]\n",
-      "           id       date   ret_exc        eom\n",
-      "0       10104 2010-02-01  0.006938 2010-02-28\n",
-      "1       10104 2010-02-02  0.023255 2010-02-28\n",
-      "2       10104 2010-02-03 -0.000421 2010-02-28\n",
-      "3       10104 2010-02-04 -0.026948 2010-02-28\n",
-      "4       10104 2010-02-05  0.019039 2010-02-28\n",
-      "...       ...        ...       ...        ...\n",
-      "602507  92655 2023-12-22  0.000624 2023-12-31\n",
-      "602508  92655 2023-12-26 -0.000741 2023-12-31\n",
-      "602509  92655 2023-12-27  0.005104 2023-12-31\n",
-      "602510  92655 2023-12-28  0.003833 2023-12-31\n",
-      "602511  92655 2023-12-29  0.002788 2023-12-31\n",
-      "\n",
-      "[602512 rows x 4 columns]\n"
+     "ename": "NameError",
+     "evalue": "name 'process_all_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 9\u001b[0m\n\u001b[0;32m      6\u001b[0m market_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m./data_test/market_returns_test.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# Kald funktionen\u001b[39;00m\n\u001b[1;32m----> 9\u001b[0m chars, daily \u001b[38;5;241m=\u001b[39m process_all_data(file_path_usa_test, daily_file_path, file_path_world_ret, risk_free_path, market_path)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'process_all_data' is not defined"
      ]
     }
    ],
@@ -143,9 +76,7 @@
     "market_path = \"./data_test/market_returns_test.csv\"\n",
     "\n",
     "# Kald funktionen\n",
-    "chars, daily = process_all_data(file_path_usa_test, daily_file_path, file_path_world_ret, risk_free_path, market_path)\n",
-    "print(chars)\n",
-    "print(daily)"
+    "chars, daily = process_all_data(file_path_usa_test, daily_file_path, file_path_world_ret, risk_free_path, market_path)"
    ]
   },
   {
