Lavet en masse rettelse

--- a/Create testsets.ipynb
+++ b/Create testsets.ipynb
@@ -52,17 +52,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "94d26018-e12e-41d6-b99b-f15cef8ae0ec",
+   "execution_count": null,
+   "id": "f4ed1b7b-0a41-4e10-8629-72316c8ed347",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#output paths: \n",
-    "risk_free_test_path = \"./data_fifty/risk_free_test.csv\"\n",
-    "output_path_usa_dsf = \"./data_fifty/usa_dsf_test.parquet\"\n",
-    "output_path_usa = \"./data_fifty/usa_test.parquet\"\n",
-    "output_path_market_returns = \"./data_fifty/market_returns_test.csv\"\n",
-    "world_ret_thres_test_path = \"./data_fifty/world_ret_test.csv\""
+    "folder_name = \"new_data\"\n",
+    "\n",
+    "if not os.path.exists(folder_name):\n",
+    "    os.makedirs(folder_name)\n",
+    "    print(f\"Folder '{folder_name}' created.\")\n",
+    "else:\n",
+    "    print(f\"Folder '{folder_name}' already exists.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a19d1b98-3fe9-413c-8ff1-4ffd20c7cabd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56c73876-6590-4bc9-88cc-3ee944c67698",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# output_path\n",
+    "risk_free_test_path = os.path.join(folder_name, \"risk_free_test.csv\")\n",
+    "output_path_usa_dsf = os.path.join(folder_name, \"usa_dsf_test.parquet\")\n",
+    "output_path_usa = os.path.join(folder_name, \"usa_test.parquet\")\n",
+    "output_path_market_returns = os.path.join(folder_name, \"market_returns_test.csv\")\n",
+    "world_ret_thres_test_path = os.path.join(folder_name, \"world_ret_test.csv\")"
    ]
   },
   {
@@ -307,8 +331,10 @@
    ],
    "source": [
     "df_ids = pd.DataFrame(df_thres_ids['id'].unique(), columns=['id'])\n",
+    "df_ids_path = os.path.join(folder_name, \"top_5_percent_ids.csv\")\n",
     "# Gem til en CSV-fil uden index-kolonne\n",
-    "df_ids.to_csv(\"./data_test/top_5_percent_ids.csv\", index=False)\n",
+    "df_ids.to_csv(df_ids_path, index=False)\n",
+    "\n",
     "    \n",
     "print(\"Fil gemt som 'top_5_percent_ids.csv'\")"
    ]
@@ -328,7 +354,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path_id_test = \"./data_test/top_5_percent_ids.csv\"\n",
+    "file_path_id_test = os.path.join(folder_name, \"top_5_percent_ids.csv\")\n",
     "file_path_usa = \"./Data/usa_rvol.parquet\" #Vi skal have den med rvol som er med i"
    ]
   },
