Lavet en masse rettelse

--- a/Create testsets.ipynb
+++ b/Create testsets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "7267362e-1760-4070-ba04-41704694af7c",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Features list length: 154\n",
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
       "1\n"
      ]
     }
@@ -22,6 +23,7 @@
     "import pyarrow \n",
     "from Prepare_Data import load_and_filter_market_returns\n",
     "import data_run_files\n",
+    "import os\n",
     "#autoreload download #pip install ipython\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -41,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "11ede8a8-1bf9-4143-b64f-a74b4dc0ac53",
    "metadata": {},
    "outputs": [],
@@ -52,10 +54,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f4ed1b7b-0a41-4e10-8629-72316c8ed347",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Folder 'new_data' created.\n"
+     ]
+    }
+   ],
    "source": [
     "folder_name = \"new_data\"\n",
     "\n",
@@ -76,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "56c73876-6590-4bc9-88cc-3ee944c67698",
    "metadata": {},
    "outputs": [],
@@ -91,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "bdd906cf-a6ee-4100-9e74-32a5fa123cd5",
    "metadata": {},
    "outputs": [],
@@ -100,7 +110,7 @@
     "start_date = pd.to_datetime('1952-12-31')\n",
     "end_date = pd.to_datetime('2022-12-31')\n",
     "#Threshold \n",
-    "thres = 0.95 #(vi beholder de øverste 10%, hvis den er lig 0.9)"
+    "thres = 0.90 #(vi beholder de øverste 10%, hvis den er lig 0.9)"
    ]
   },
   {
@@ -113,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "f6196b1b-0edb-4d8e-8cd5-32b52a76b35e",
    "metadata": {},
    "outputs": [
@@ -132,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "f8238c72-42df-4248-a376-a7b35f2ba4ef",
    "metadata": {},
    "outputs": [],
@@ -143,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "7e2a16dc-c813-417f-a47a-310b74a6d598",
    "metadata": {},
    "outputs": [
@@ -200,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "e5d980f2-7a7a-4972-92ba-400432334800",
    "metadata": {},
    "outputs": [
@@ -208,8 +218,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Grænseværdi for top 15% virksomheder: 6382.731123102463\n",
-      "Antal unikke virksomheder i top 15%: 616\n"
+      "Grænseværdi for top 15% virksomheder: 3186.19966453\n",
+      "Antal unikke virksomheder i top 15%: 1232\n"
      ]
     }
    ],
@@ -233,20 +243,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "e77d2034-f5a5-4d13-83da-c7c9ba7c379c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index([10078, 10104, 10107, 10138, 10147, 10299, 10324, 10401, 10696, 11042,\n",
+       "Index([10078, 10104, 10107, 10138, 10145, 10147, 10220, 10299, 10324, 10401,\n",
        "       ...\n",
-       "       93089, 93094, 93096, 93101, 93132, 93150, 93296, 93312, 93338, 93436],\n",
-       "      dtype='int32', name='id', length=616)"
+       "       93295, 93296, 93312, 93330, 93338, 93374, 93422, 93423, 93429, 93436],\n",
+       "      dtype='int32', name='id', length=1232)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,20 +267,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "b1dd772b-74e1-40aa-933e-f69ee4555b7e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index([10078, 10104, 10107, 10138, 10147, 10299, 10324, 10401, 10696, 11042,\n",
+       "Index([10078, 10104, 10107, 10138, 10145, 10147, 10220, 10299, 10324, 10401,\n",
        "       ...\n",
-       "       93089, 93094, 93096, 93101, 93132, 93150, 93296, 93312, 93338, 93436],\n",
-       "      dtype='int32', name='id', length=616)"
+       "       93295, 93296, 93312, 93330, 93338, 93374, 93422, 93423, 93429, 93436],\n",
+       "      dtype='int32', name='id', length=1232)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "94967d1f-d29a-4031-8363-7d896a244d1d",
    "metadata": {},
    "outputs": [
@@ -297,7 +307,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Antal unikke virksomheder med data på både første og sidste dato: 180\n"
+      "Antal unikke virksomheder med data på både første og sidste dato: 310\n"
      ]
     }
    ],
@@ -317,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "33a67c9e-2251-470b-be7d-9c1eabb3ec76",
    "metadata": {},
    "outputs": [
@@ -349,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "b8fee8c5-88b6-4d6f-80b8-a5fbcdb3b093",
    "metadata": {},
    "outputs": [],
@@ -360,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "1a48dadb-043e-48ba-8a27-f4cae402c7ff",
    "metadata": {},
    "outputs": [
@@ -369,50 +379,50 @@
      "output_type": "stream",
      "text": [
       "Filtrering udført. Antal rækker efter filtrering: 841\n",
-      "Fil gemt som ./data_fifty/risk_free_test.csv\n",
+      "Fil gemt som new_data\\risk_free_test.csv\n",
       "Fil ./Data/usa_dsf.parquet indlæst med succes. Antal rækker før filtrering: 176877668\n",
-      "Filtrering af ID'er udført. Antal rækker efter filtrering: 2072920\n",
+      "Filtrering af ID'er udført. Antal rækker efter filtrering: 3673896\n",
       "Bruger 'date' i stedet for 'eom'.\n",
-      "Filtrering på startdato 1952-12-31 00:00:00 udført. Antal rækker efter filtrering: 1953639\n",
-      "Antal unikke virksomheder efter filtrering: 180\n",
-      "Fil gemt som ./data_fifty/usa_dsf_test.parquet\n",
+      "Filtrering på startdato 1952-12-31 00:00:00 udført. Antal rækker efter filtrering: 3430909\n",
+      "Antal unikke virksomheder efter filtrering: 310\n",
+      "Fil gemt som new_data\\usa_dsf_test.parquet\n",
       "Fil ./Data/usa_rvol.parquet indlæst med succes. Antal rækker før filtrering: 1373911\n",
-      "Filtrering af ID'er udført. Antal rækker efter filtrering: 89046\n",
-      "Filtrering på startdato 1952-12-31 00:00:00 udført. Antal rækker efter filtrering: 88864\n",
-      "Antal unikke virksomheder efter filtrering: 180\n",
-      "Fil gemt som ./data_fifty/usa_test.parquet\n",
+      "Filtrering af ID'er udført. Antal rækker efter filtrering: 154259\n",
+      "Filtrering på startdato 1952-12-31 00:00:00 udført. Antal rækker efter filtrering: 153887\n",
+      "Antal unikke virksomheder efter filtrering: 310\n",
+      "Fil gemt som new_data\\usa_test.parquet\n",
       "Filen er indlæst og filtreret succesfuldt.\n",
-      "Fil gemt som ./data_fifty/market_returns_test.csv med 841 rækker.\n",
-      "All missing excludes 42.07% of the observations\n",
-      "Data gemt i: ./data_fifty/world_ret_test.csv\n",
-      "           id excntry        eom          me       ret  ret_local   ret_exc  \\\n",
-      "260479  18411     USA 1952-12-31  273.280000 -0.015385  -0.015385 -0.017138   \n",
-      "260484  14277     USA 1952-12-31    9.375000 -0.016393  -0.016393 -0.018146   \n",
-      "260502  18163     USA 1952-12-31  649.012500 -0.014599  -0.014599 -0.016352   \n",
-      "260504  15720     USA 1952-12-31  209.713875  0.000000   0.000000 -0.001753   \n",
-      "260517  13856     USA 1952-12-31   68.305000  0.250000   0.250000  0.248247   \n",
+      "Fil gemt som new_data\\market_returns_test.csv med 841 rækker.\n",
+      "All missing excludes 1.44% of the observations\n",
+      "Data gemt i: new_data\\world_ret_test.csv\n",
+      "           id excntry        eom           me       ret  ret_local   ret_exc  \\\n",
+      "260425  10145     USA 1952-12-31   680.805000  0.001629   0.001629 -0.000124   \n",
+      "260457  15069     USA 1952-12-31  1106.368875  0.027273   0.027273  0.025520   \n",
+      "260464  24985     USA 1952-12-31    19.610000       NaN        NaN       NaN   \n",
+      "260465  15579     USA 1952-12-31     2.086000 -0.200000  -0.200000 -0.201753   \n",
+      "260473  17830     USA 1952-12-31   121.296000  0.041096   0.041096  0.039343   \n",
       "\n",
       "        source_crsp  \n",
-      "260479            1  \n",
-      "260484            1  \n",
-      "260502            1  \n",
-      "260504            1  \n",
-      "260517            1  \n",
-      "             id excntry        eom             me       ret  ret_local  \\\n",
-      "24069025  75607     USA 2022-12-31   13693.770195 -0.066638  -0.066638   \n",
-      "24069040  12062     USA 2022-12-31   20863.527621 -0.021687  -0.021687   \n",
-      "24069064  76076     USA 2022-12-31  195710.024410 -0.041834  -0.041834   \n",
-      "24069071  75828     USA 2022-12-31   33599.500084 -0.065759  -0.065759   \n",
-      "24069138  10696     USA 2022-12-31   63674.099808 -0.031525  -0.031525   \n",
+      "260425            1  \n",
+      "260457            1  \n",
+      "260464            1  \n",
+      "260465            1  \n",
+      "260473            1  \n",
+      "             id excntry        eom            me       ret  ret_local  \\\n",
+      "24069085  11403     USA 2022-12-31  43802.511834 -0.066264  -0.066264   \n",
+      "24069107  11618     USA 2022-12-31  27010.823666 -0.081343  -0.081343   \n",
+      "24069110  11600     USA 2022-12-31   6851.968033  0.056345   0.056345   \n",
+      "24069117  10933     USA 2022-12-31  17720.240369 -0.005548  -0.005548   \n",
+      "24069138  10696     USA 2022-12-31  63674.099808 -0.031525  -0.031525   \n",
       "\n",
       "           ret_exc  source_crsp  \n",
-      "24069025 -0.070017            1  \n",
-      "24069040 -0.025066            1  \n",
-      "24069064 -0.045213            1  \n",
-      "24069071 -0.069138            1  \n",
+      "24069085 -0.069643            1  \n",
+      "24069107 -0.084722            1  \n",
+      "24069110  0.052966            1  \n",
+      "24069117 -0.008927            1  \n",
       "24069138 -0.034904            1  \n",
-      "Shape efter dato-filter: (91364, 8)\n",
-      "Antal unikke ID'er efter dato-filter: 180\n"
+      "Shape efter dato-filter: (160610, 8)\n",
+      "Antal unikke ID'er efter dato-filter: 310\n"
      ]
     }
    ],
