--- a/Implementable efficient frontier.ipynb
+++ b/Implementable efficient frontier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 1,
    "id": "008756a4-64b3-4532-804f-d145560b8238",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Filtrering udført. Antal rækker efter filtrering: 841\n",
-      "Fil gemt som ./data_test/risk_free_test.csv\n"
+      "Features list length: 154\n"
      ]
     }
    ],
@@ -39,27 +38,59 @@
     "start_date = pd.to_datetime('1952-12-31')\n",
     "\n",
     "#Relevante paths\n",
-    "output_path = \"./data_fifty/\"\n",
-    "pickle_file_path = \"./data_fifty/model_1.pkl\"\n",
-    "wealth_path = \"./data_fifty/wealth.csv\"\n",
-    "barra_file_path = \"./data_fifty/barra_cov.pkl\"\n",
-    "output_path_market_returns = \"data_fifty/market_returns_test.csv\"\n",
+    "#output_path = \"./data_fifty/\"\n",
+    "#pickle_file_path = \"./data_fifty/model_1.pkl\"\n",
+    "#wealth_path = \"./data_fifty/wealth.csv\"\n",
+    "#barra_file_path = \"./data_fifty/barra_cov.pkl\"\n",
+    "#output_path_market_returns = \"data_fifty/market_returns_test.csv\"\n",
     "\n",
-    "risk_free_path = \"./data_fifty/risk_free_test.csv\" \n",
-    "output_data_ret_csv = \"./data_fifty/data_ret.csv\"  \n",
-    "output_data_ret_ld1_csv = \"./data_fifty/data_ret_ld1.csv\"\n",
+    "#risk_free_path = \"./data_fifty/risk_free_test.csv\" \n",
+    "#output_data_ret_csv = \"./data_fifty/data_ret.csv\"  \n",
+    "#output_data_ret_ld1_csv = \"./data_fifty/data_ret_ld1.csv\"\n",
     "\n",
     "file_path_cluster_labels = \"Data/Cluster Labels.csv\"\n",
     "file_path_factor_details = \"Data/Factor Details.xlsx\"\n",
     "\n",
-    "risk_free = data_run_files.process_risk_free_rate(risk_free_path, start_date)\n",
-    "daily_path = \"./data_fifty/daily.csv\"\n",
-    "chars_path = \"./data_fifty/chars_behandlet.parquet\"\n"
+    "#risk_free = data_run_files.process_risk_free_rate(risk_free_path, start_date)\n",
+    "#daily_path = \"./data_fifty/daily.csv\"\n",
+    "#chars_path = \"./data_fifty/chars_behandlet.parquet\"\n",
+    "\n",
+    "\n",
+    "folder_name = \"new_data\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 2,
+   "id": "58f30cf9-563a-4320-8656-a83d20ca2379",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_path = os.path.join(\".\", folder_name, \"\")\n",
+    "market_path = os.path.join(\".\", folder_name, \"market_returns_test.csv\")\n",
+    "pickle_file_path = os.path.join(\".\", folder_name, \"model_1.pkl\")\n",
+    "wealth_path = os.path.join(\".\", folder_name, \"wealth.csv\")\n",
+    "barra_file_path = os.path.join(\".\", folder_name, \"barra_cov.pkl\")\n",
+    "output_path_market_returns = os.path.join(folder_name, \"market_returns_test.csv\")\n",
+    "\n",
+    "risk_free_path = os.path.join(\".\", folder_name, \"risk_free_test.csv\")\n",
+    "output_data_ret_csv = os.path.join(\".\", folder_name, \"data_ret.csv\")\n",
+    "output_data_ret_ld1_csv = os.path.join(\".\", folder_name, \"data_ret_ld1.csv\")\n",
+    "daily_path = os.path.join(\".\", folder_name, \"daily.csv\")\n",
+    "chars_path = os.path.join(\".\", folder_name, \"chars_behandlet.parquet\")\n",
+    "file_path_world_ret = os.path.join(\".\", folder_name, \"world_ret_test.csv\")\n",
+    "daily_file_path = os.path.join(\".\", folder_name, \"usa_dsf_test.parquet\")\n",
+    "output_path_usa = os.path.join(\".\", folder_name, \"usa_test.parquet\")\n",
+    "output_path_chars_behandlet =  os.path.join(\".\", folder_name, \"chars_behandlet.parquet\")\n",
+    "output_path_daily = os.path.join(\".\", folder_name, \"daily.csv\")\n",
+    "# Paths for Data-mappen forbliver uændrede\n",
+    "file_path_cluster_labels = os.path.join(\"Data\", \"Cluster Labels.csv\")\n",
+    "file_path_factor_details = os.path.join(\"Data\", \"Factor Details.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "0dee703f-b98e-4c99-bee9-89864f6ce5b2",
    "metadata": {},
    "outputs": [],
@@ -122,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 4,
    "id": "9b854db1-cdcb-4482-87ba-208dd8672b39",
    "metadata": {},
    "outputs": [],
