--- a/Create testsets.ipynb
+++ b/Create testsets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "7267362e-1760-4070-ba04-41704694af7c",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "id": "11ede8a8-1bf9-4143-b64f-a74b4dc0ac53",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "id": "f4ed1b7b-0a41-4e10-8629-72316c8ed347",
    "metadata": {},
    "outputs": [
@@ -62,12 +62,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Folder 'new_data' created.\n"
+      "Folder 'much_more_data' already exists.\n"
      ]
     }
    ],
    "source": [
-    "folder_name = \"new_data\"\n",
+    "folder_name = \"much_more_data\"\n",
     "\n",
     "if not os.path.exists(folder_name):\n",
     "    os.makedirs(folder_name)\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "id": "56c73876-6590-4bc9-88cc-3ee944c67698",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "id": "bdd906cf-a6ee-4100-9e74-32a5fa123cd5",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
     "start_date = pd.to_datetime('1952-12-31')\n",
     "end_date = pd.to_datetime('2022-12-31')\n",
     "#Threshold \n",
-    "thres = 0.90 #(vi beholder de øverste 10%, hvis den er lig 0.9)"
+    "thres = 0.50 #(vi beholder de øverste 10%, hvis den er lig 0.9)"
    ]
   },
   {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "id": "f6196b1b-0edb-4d8e-8cd5-32b52a76b35e",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "id": "f8238c72-42df-4248-a376-a7b35f2ba4ef",
    "metadata": {},
    "outputs": [],
@@ -153,9 +153,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "id": "7e2a16dc-c813-417f-a47a-310b74a6d598",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -210,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "id": "e5d980f2-7a7a-4972-92ba-400432334800",
    "metadata": {},
    "outputs": [
@@ -218,8 +220,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Grænseværdi for top 15% virksomheder: 3186.19966453\n",
-      "Antal unikke virksomheder i top 15%: 1232\n"
+      "Grænseværdi for top 15% virksomheder: 545.8998885925\n",
+      "Antal unikke virksomheder i top 15%: 6160\n"
      ]
     }
    ],
@@ -243,20 +245,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "id": "e77d2034-f5a5-4d13-83da-c7c9ba7c379c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index([10078, 10104, 10107, 10138, 10145, 10147, 10220, 10299, 10324, 10401,\n",
+       "Index([10026, 10032, 10051, 10078, 10085, 10104, 10107, 10108, 10119, 10126,\n",
        "       ...\n",
-       "       93295, 93296, 93312, 93330, 93338, 93374, 93422, 93423, 93429, 93436],\n",
-       "      dtype='int32', name='id', length=1232)"
+       "       93401, 93402, 93418, 93420, 93422, 93423, 93427, 93428, 93429, 93436],\n",
+       "      dtype='int32', name='id', length=6160)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,20 +269,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "id": "b1dd772b-74e1-40aa-933e-f69ee4555b7e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index([10078, 10104, 10107, 10138, 10145, 10147, 10220, 10299, 10324, 10401,\n",
+       "Index([10026, 10032, 10051, 10078, 10085, 10104, 10107, 10108, 10119, 10126,\n",
        "       ...\n",
-       "       93295, 93296, 93312, 93330, 93338, 93374, 93422, 93423, 93429, 93436],\n",
-       "      dtype='int32', name='id', length=1232)"
+       "       93401, 93402, 93418, 93420, 93422, 93423, 93427, 93428, 93429, 93436],\n",
+       "      dtype='int32', name='id', length=6160)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "id": "94967d1f-d29a-4031-8363-7d896a244d1d",
    "metadata": {},
    "outputs": [
@@ -307,7 +309,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Antal unikke virksomheder med data på både første og sidste dato: 310\n"
+      "Antal unikke virksomheder med data på både første og sidste dato: 740\n"
      ]
     }
    ],
@@ -327,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "id": "33a67c9e-2251-470b-be7d-9c1eabb3ec76",
    "metadata": {},
    "outputs": [
@@ -359,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "id": "b8fee8c5-88b6-4d6f-80b8-a5fbcdb3b093",
    "metadata": {},
    "outputs": [],
@@ -370,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "id": "1a48dadb-043e-48ba-8a27-f4cae402c7ff",
    "metadata": {},
    "outputs": [
@@ -379,50 +381,50 @@
      "output_type": "stream",
      "text": [
       "Filtrering udført. Antal rækker efter filtrering: 841\n",
-      "Fil gemt som new_data\\risk_free_test.csv\n",
+      "Fil gemt som much_more_data\\risk_free_test.csv\n",
       "Fil ./Data/usa_dsf.parquet indlæst med succes. Antal rækker før filtrering: 176877668\n",
-      "Filtrering af ID'er udført. Antal rækker efter filtrering: 3673896\n",
+      "Filtrering af ID'er udført. Antal rækker efter filtrering: 8415605\n",
       "Bruger 'date' i stedet for 'eom'.\n",
-      "Filtrering på startdato 1952-12-31 00:00:00 udført. Antal rækker efter filtrering: 3430909\n",
-      "Antal unikke virksomheder efter filtrering: 310\n",
-      "Fil gemt som new_data\\usa_dsf_test.parquet\n",
+      "Filtrering på startdato 1952-12-31 00:00:00 udført. Antal rækker efter filtrering: 7985109\n",
+      "Antal unikke virksomheder efter filtrering: 740\n",
+      "Fil gemt som much_more_data\\usa_dsf_test.parquet\n",
       "Fil ./Data/usa_rvol.parquet indlæst med succes. Antal rækker før filtrering: 1373911\n",
-      "Filtrering af ID'er udført. Antal rækker efter filtrering: 154259\n",
-      "Filtrering på startdato 1952-12-31 00:00:00 udført. Antal rækker efter filtrering: 153887\n",
-      "Antal unikke virksomheder efter filtrering: 310\n",
-      "Fil gemt som new_data\\usa_test.parquet\n",
+      "Filtrering af ID'er udført. Antal rækker efter filtrering: 336020\n",
+      "Filtrering på startdato 1952-12-31 00:00:00 udført. Antal rækker efter filtrering: 335389\n",
+      "Antal unikke virksomheder efter filtrering: 740\n",
+      "Fil gemt som much_more_data\\usa_test.parquet\n",
       "Filen er indlæst og filtreret succesfuldt.\n",
-      "Fil gemt som new_data\\market_returns_test.csv med 841 rækker.\n",
-      "All missing excludes 1.44% of the observations\n",
-      "Data gemt i: new_data\\world_ret_test.csv\n",
-      "           id excntry        eom           me       ret  ret_local   ret_exc  \\\n",
-      "260425  10145     USA 1952-12-31   680.805000  0.001629   0.001629 -0.000124   \n",
-      "260457  15069     USA 1952-12-31  1106.368875  0.027273   0.027273  0.025520   \n",
-      "260464  24985     USA 1952-12-31    19.610000       NaN        NaN       NaN   \n",
-      "260465  15579     USA 1952-12-31     2.086000 -0.200000  -0.200000 -0.201753   \n",
-      "260473  17830     USA 1952-12-31   121.296000  0.041096   0.041096  0.039343   \n",
+      "Fil gemt som much_more_data\\market_returns_test.csv med 841 rækker.\n",
+      "All missing excludes 5.68% of the observations\n",
+      "Data gemt i: much_more_data\\world_ret_test.csv\n",
+      "           id excntry        eom         me       ret  ret_local   ret_exc  \\\n",
+      "260425  10145     USA 1952-12-31  680.80500  0.001629   0.001629 -0.000124   \n",
+      "260435  15456     USA 1952-12-31  436.63500  0.014085   0.014085  0.012332   \n",
+      "260437  24969     USA 1952-12-31   64.99050  0.062201   0.062201  0.060448   \n",
+      "260439  21186     USA 1952-12-31   73.06200  0.000000   0.000000 -0.001753   \n",
+      "260441  23536     USA 1952-12-31  115.35825 -0.026667  -0.026667 -0.028420   \n",
       "\n",
       "        source_crsp  \n",
       "260425            1  \n",
-      "260457            1  \n",
-      "260464            1  \n",
-      "260465            1  \n",
-      "260473            1  \n",
+      "260435            1  \n",
+      "260437            1  \n",
+      "260439            1  \n",
+      "260441            1  \n",
       "             id excntry        eom            me       ret  ret_local  \\\n",
-      "24069085  11403     USA 2022-12-31  43802.511834 -0.066264  -0.066264   \n",
-      "24069107  11618     USA 2022-12-31  27010.823666 -0.081343  -0.081343   \n",
-      "24069110  11600     USA 2022-12-31   6851.968033  0.056345   0.056345   \n",
-      "24069117  10933     USA 2022-12-31  17720.240369 -0.005548  -0.005548   \n",
+      "24069123  11154     USA 2022-12-31   1039.050535 -0.104787  -0.104787   \n",
+      "24069131  10693     USA 2022-12-31   5968.320417  0.025308   0.025308   \n",
+      "24069135  11018     USA 2022-12-31   2348.264689 -0.172952  -0.172952   \n",
+      "24069136  10777     USA 2022-12-31  10238.618162 -0.071161  -0.071161   \n",
       "24069138  10696     USA 2022-12-31  63674.099808 -0.031525  -0.031525   \n",
       "\n",
       "           ret_exc  source_crsp  \n",
-      "24069085 -0.069643            1  \n",
-      "24069107 -0.084722            1  \n",
-      "24069110  0.052966            1  \n",
-      "24069117 -0.008927            1  \n",
+      "24069123 -0.108166            1  \n",
+      "24069131  0.021929            1  \n",
+      "24069135 -0.176331            1  \n",
+      "24069136 -0.074540            1  \n",
       "24069138 -0.034904            1  \n",
-      "Shape efter dato-filter: (160610, 8)\n",
-      "Antal unikke ID'er efter dato-filter: 310\n"
+      "Shape efter dato-filter: (373633, 8)\n",
+      "Antal unikke ID'er efter dato-filter: 740\n"
      ]
     }
    ],
