Rettet en masse funktion og tekst dertil

--- a/Create testsets.ipynb
+++ b/Create testsets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "7267362e-1760-4070-ba04-41704694af7c",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
+      "Features list length: 154\n",
       "1\n"
      ]
     }
@@ -43,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "11ede8a8-1bf9-4143-b64f-a74b4dc0ac53",
    "metadata": {},
    "outputs": [],
@@ -54,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "f4ed1b7b-0a41-4e10-8629-72316c8ed347",
    "metadata": {},
    "outputs": [
@@ -86,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "56c73876-6590-4bc9-88cc-3ee944c67698",
    "metadata": {},
    "outputs": [],
@@ -101,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "bdd906cf-a6ee-4100-9e74-32a5fa123cd5",
    "metadata": {},
    "outputs": [],
@@ -123,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "f6196b1b-0edb-4d8e-8cd5-32b52a76b35e",
    "metadata": {},
    "outputs": [
@@ -142,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "f8238c72-42df-4248-a376-a7b35f2ba4ef",
    "metadata": {},
    "outputs": [],
@@ -153,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "7e2a16dc-c813-417f-a47a-310b74a6d598",
    "metadata": {
     "scrolled": true
@@ -199,10 +198,9 @@
    ],
    "source": [
     "df_usa.loc[:, 'eom'] = pd.to_datetime(df_usa['eom'], errors='coerce')\n",
-    "# Filtrer kun data fra og med 2010\n",
+    "\n",
     "df_usa_filtered = df_usa[df_usa['eom'] >= start_date]\n",
     "\n",
-    "# Bekræft ændringen\n",
     "print(df_usa_filtered.head())\n",
     "print(f\"Antal observationer efter filtrering: {len(df_usa_filtered)}\")\n",
     "\n",
@@ -212,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "e5d980f2-7a7a-4972-92ba-400432334800",
    "metadata": {},
    "outputs": [
@@ -245,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "id": "e77d2034-f5a5-4d13-83da-c7c9ba7c379c",
    "metadata": {},
    "outputs": [
@@ -258,7 +256,7 @@
        "      dtype='int32', name='id', length=6160)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "id": "b1dd772b-74e1-40aa-933e-f69ee4555b7e",
    "metadata": {},
    "outputs": [
@@ -282,7 +280,7 @@
        "      dtype='int32', name='id', length=6160)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "id": "94967d1f-d29a-4031-8363-7d896a244d1d",
    "metadata": {},
    "outputs": [
@@ -309,6 +307,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2000-12-31 00:00:00\n",
+      "2023-11-30 00:00:00\n",
       "Antal unikke virksomheder med data på både første og sidste dato: 740\n"
      ]
     }
@@ -317,8 +317,9 @@
     "# Find første og sidste dato i dataset\n",
     "first_date = df_thres_ids['eom'].min()\n",
     "first_date2 = pd.to_datetime('2000-12-31')\n",
+    "print(first_date2)\n",
     "last_date = df_thres_ids['eom'].max()\n",
-    "\n",
+    "print(last_date)\n",
     "# Filtrer virksomheder, der har data på både første og sidste dato\n",
     "df_thres_ids = df_thres_ids.groupby('id').filter(\n",
     "    lambda x: (first_date2 in x['eom'].values) and (last_date in x['eom'].values)\n",
