--- a/Create testsets.ipynb
+++ b/Create testsets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7267362e-1760-4070-ba04-41704694af7c",
    "metadata": {},
    "outputs": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "11ede8a8-1bf9-4143-b64f-a74b4dc0ac53",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f4ed1b7b-0a41-4e10-8629-72316c8ed347",
    "metadata": {},
    "outputs": [
@@ -61,12 +61,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Folder 'much_more_data' already exists.\n"
+      "Folder 'all_data_try' created.\n"
      ]
     }
    ],
    "source": [
-    "folder_name = \"much_more_data\"\n",
+    "folder_name = \"all_data_try\"\n",
     "\n",
     "if not os.path.exists(folder_name):\n",
     "    os.makedirs(folder_name)\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "56c73876-6590-4bc9-88cc-3ee944c67698",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "bdd906cf-a6ee-4100-9e74-32a5fa123cd5",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
     "start_date = pd.to_datetime('1952-12-31')\n",
     "end_date = pd.to_datetime('2022-12-31')\n",
     "#Threshold \n",
-    "thres = 0.50 #(vi beholder de øverste 10%, hvis den er lig 0.9)"
+    "thres = 0 #(vi beholder de øverste 10%, hvis den er lig 0.9)"
    ]
   },
   {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "f6196b1b-0edb-4d8e-8cd5-32b52a76b35e",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "f8238c72-42df-4248-a376-a7b35f2ba4ef",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "7e2a16dc-c813-417f-a47a-310b74a6d598",
    "metadata": {
     "scrolled": true
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "e5d980f2-7a7a-4972-92ba-400432334800",
    "metadata": {},
    "outputs": [
@@ -218,8 +218,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Grænseværdi for top 15% virksomheder: 545.8998885925\n",
-      "Antal unikke virksomheder i top 15%: 6160\n"
+      "Grænseværdi for top 15% virksomheder: 9.378875\n",
+      "Antal unikke virksomheder i top 15%: 12320\n"
      ]
     }
    ],
@@ -299,33 +299,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "94967d1f-d29a-4031-8363-7d896a244d1d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2000-12-31 00:00:00\n",
-      "2023-11-30 00:00:00\n",
-      "Antal unikke virksomheder med data på både første og sidste dato: 740\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Find første og sidste dato i dataset\n",
-    "first_date = df_thres_ids['eom'].min()\n",
-    "first_date2 = pd.to_datetime('2000-12-31')\n",
-    "print(first_date2)\n",
-    "last_date = df_thres_ids['eom'].max()\n",
-    "print(last_date)\n",
+    "#first_date = df_thres_ids['eom'].min()\n",
+    "#first_date2 = pd.to_datetime('2000-12-31')\n",
+    "#print(first_date2)\n",
+    "#last_date = df_thres_ids['eom'].max()\n",
+    "#print(last_date)\n",
     "# Filtrer virksomheder, der har data på både første og sidste dato\n",
-    "df_thres_ids = df_thres_ids.groupby('id').filter(\n",
-    "    lambda x: (first_date2 in x['eom'].values) and (last_date in x['eom'].values)\n",
-    ")\n",
+    "#df_thres_ids = df_thres_ids.groupby('id').filter(\n",
+    "#    lambda x: (first_date2 in x['eom'].values) and (last_date in x['eom'].values)\n",
+    "#)\n",
     "# Udskriv antal unikke virksomheder efter filtrering\n",
-    "print(f\"Antal unikke virksomheder med data på både første og sidste dato: {df_thres_ids['id'].nunique()}\")"
+    "#print(f\"Antal unikke virksomheder med data på både første og sidste dato: {df_thres_ids['id'].nunique()}\")"
    ]
   },
   {
