--- a/Prediction_new.ipynb
+++ b/Prediction_new.ipynb
@@ -102,6 +102,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "ada8643e-fea0-4d49-8e22-f0361d84714d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_return_predictions_arima(chars, settings, get_from_path_model):\n",
+    "\n",
+    "    for h in range(1, 2): #Hardcoded 2 ind for vi har kun 1 horizon\n",
+    "        file_path = os.path.join(get_from_path_model, f\"model_{h}_arima_pred.pkl\")\n",
+    "        with open(file_path, 'rb') as f:\n",
+    "            model_dict = pickle.load(f)\n",
+    "\n",
+    "        all_preds = []\n",
+    "        for date_key, subdict in model_dict.items():\n",
+    "            # Antag at hver subdictionary indeholder en key \"pred\"\n",
+    "            pred_df = pd.DataFrame(subdict['pred'])\n",
+    "            all_preds.append(pred_df)\n",
+    "\n",
+    "        # Saml alle forudsigelsesdata\n",
+    "        pred_df_all = pd.concat(all_preds, ignore_index=True)\n",
+    "        pred_df_all = pred_df_all[['id', 'eom', 'pred']].rename(columns={'pred': f'pred_ld{h}'})\n",
+    "\n",
+    "        # Merge forudsigelserne ind i chars\n",
+    "        chars = chars.merge(pred_df_all, on=['id', 'eom'], how='left')\n",
+    "\n",
+    "    return chars\n",
+    "chars_no_constant_demeaned = add_return_predictions_arima(chars, settings, output_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b458403c-2de1-46a9-b642-c76d99285002",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'chars' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m chars_no_constant_demeaned \u001b[38;5;241m=\u001b[39m add_return_predictions_arima(chars, settings, output_path)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'chars' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "chars_no_constant_demeaned = add_return_predictions_arima(chars, settings, output_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 36,
    "id": "93949708-e8ba-4a28-b238-ff25f5a1fcd0",
    "metadata": {},
@@ -362,6 +415,28 @@
    "metadata": {},
    "source": [
     "## chars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d471bd79-f590-40c1-aa20-fe8882a94239",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'risk_free' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m risk_free\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'risk_free' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "risk_free"
    ]
   },
   {
