Lavet en flot read_me

--- a/PREDICTIONS.ipynb
+++ b/PREDICTIONS.ipynb
@@ -57,7 +57,7 @@
     }
    ],
    "source": [
-    "# Definér folder_name, så alle paths kan ændres ét sted\n",
+    "# Definér folder_name\n",
     "folder_name = \"much_more_data\"\n",
     "\n",
     "\n",
@@ -73,7 +73,7 @@
     "\n",
     "file_path_usa_test = os.path.join(\".\", folder_name, \"usa_test.parquet\")\n",
     "daily_file_path = os.path.join(\".\", folder_name, \"usa_dsf_test.parquet\")\n",
-    "file_path_world_ret = os.path.join(\".\", folder_name, \"world_ret_test.csv\")  # gentaget hvis nødvendigt\n",
+    "file_path_world_ret = os.path.join(\".\", folder_name, \"world_ret_test.csv\")  \n",
     "risk_free_path = os.path.join(\".\", folder_name, \"risk_free_test.csv\")\n",
     "market_path = os.path.join(\".\", folder_name, \"market_returns_test.csv\")\n",
     "\n",
